--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <a routerLink="/" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
       <mat-icon>home</mat-icon>
     </a>
-    <span>Examportal</span>
+    <span>College Adda</span>
     <span class="example-spacer"></span>
     <a *ngIf="!isLoggedIn" routerLink="/login" mat-button >
       Login
