--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row mt20">
             <div class="col-md-6 offset-3 text-center">
-                <h1>Welcome to Exam Portal</h1>
+                <h1>Welcome to College Adda</h1>
             </div>
         </div>
     </div>
